# small-projects

./: .gitignore  README.md
rock paper scissers/: CMakeLists.txt
rock paper scissers/hpp/: possible_player_moves.hpp  random_select_player_move.hpp  rock_paper_scissor.hpp
rock paper scissers/src/: main.cxx  random_select_player_move.cxx  rock_paper_scissor.cxx
